Fix scrolling issue with search results in modal
- It's a hack, since it seems like there is an underlying issue
with the Table component in NextUI. It doesn't scroll properly and
the height property is ignored if passed in with CSS. Added a wrapper
div that instead scrolls if the table is too long.

--- a/frontend/searchle/components/wordPuzzle/word-puzzle.module.scss
+++ b/frontend/searchle/components/wordPuzzle/word-puzzle.module.scss
@@ -50,3 +50,8 @@
 .wordPuzzleSearchBtn {
   width: 23rem;
 }
+
+.searchResultsContainer {
+  margin-top: 30px;
+  overflow: scroll;
+}
